--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
 .App {
-  text-align: center;
+  text-align: 
 }
 
+
+
+img .logo {
+  margin-left: 40px, 0 30px 40px;
+  padding-top: 20px;
+  padding-left: 30px;
+}
+hr { 
+  width:100%; 
+  height:1px; 
+  background-color: black; 
+}
