--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,59 @@
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: 
+  font-family: "COOP-Regular","Helvetica Neue",Helvetica,Arial,sans-serif;
+  
 }
 
-
-
-img .logo {
-  margin-left: 40px, 0 30px 40px;
-  padding-top: 20px;
+ .imagelogo {
+  margin: 50px, 0 20px 40px;
+  padding-top: 50px;
   padding-left: 30px;
+
 }
+
 hr { 
   width:100%; 
-  height:1px; 
-  background-color: black; 
+  height:3.5px; 
+  background-color: #046ab8
 }
+
+.firstHeading, .secondHeading {
+  font-size: medium;
+  margin-left: 50px;
+  font-size: 21px;
+  color: #002663;
+}
+.main {
+  background-color:;
+}
+
+.chuck {
+  max-width: 100%;
+  margin-top: 0px;
+  display: flex;
+  margin-block-end: 0px;
+  
+  justify-content: right;
+    font-style: italic;
+   
+   }
+
+ .secondHeading {
+   font-size: 30px;
+ }
+
+ .Button .btn .btn-button {
+   color: #002663;
+   margin-left: 50px;
+   padding-left: 100px;
+ }
+ 
+ #col_button {
+  margin-left: 50px;
+  padding-left: 100px;
+  margin-top: 100px;
+ }
