--- a/src/App.css
+++ b/src/App.css
@@ -27,27 +27,21 @@ hr {
   font-size: 21px;
   color: #002663;
 }
-.main {
-  background-color:;
-}
+
 
 .chuck {
   max-width: 100%;
-  margin-top: 0px;
+  margin-top: 10px;
   display: flex;
-  margin-block-end: 0px;
-  
   justify-content: right;
-    font-style: italic;
-   
    }
 
  .secondHeading {
    font-size: 30px;
  }
 
- .Button .btn .btn-button {
-   color: #002663;
+ .Button .btn .btn-button { 
+   color: aliceblue;
    margin-left: 50px;
    padding-left: 100px;
  }
@@ -55,5 +49,32 @@ hr {
  #col_button {
   margin-left: 50px;
   padding-left: 100px;
-  margin-top: 100px;
+  margin-top: 50px;
+ }
+
+ h1 {
+   color: #002663;
+   font-size: 42.66px;
+  margin-left: 30px;
+  padding-left: 20px;
+   padding-top: 5px;
+  padding-bottom: 5px;
+   font-family: Helvetica;
+   font-weight: 600;
+   justify-content: center;
+ }
+
+ #renderjokes {
+  font-family: Helvetica;
+  font-size: 20px;
+  font-weight: 200;
+  margin-top:10px;
+  padding:10px;
+  margin:10px
+ }
+
+ p {
+   color: #002663;
+   margin-left: 20px;
+   padding-left: 10px;
  }
