--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,8 @@
 hr { 
   width:100%; 
   height:3.5px; 
-  background-color: #046ab8
+  background-color: #046AB8;
+  margin:0.5px;
 }
 
 .firstHeading, .secondHeading {
@@ -34,6 +35,7 @@ hr {
   margin-top: 10px;
   display: flex;
   justify-content: right;
+  margin-bottom: 50px;
    }
 
  .secondHeading {
@@ -50,6 +52,7 @@ hr {
   margin-left: 50px;
   padding-left: 100px;
   margin-top: 50px;
+  
  }
 
  h1 {
@@ -57,7 +60,7 @@ hr {
    font-size: 42.66px;
   margin-left: 30px;
   padding-left: 20px;
-   padding-top: 5px;
+   padding-top: 15px;
   padding-bottom: 5px;
    font-family: Helvetica;
    font-weight: 600;
@@ -77,4 +80,19 @@ hr {
    color: #002663;
    margin-left: 20px;
    padding-left: 10px;
+   margin-bottom: 50px;
  }
+ 
+ .Footer {
+   background-color: #002663;
+   min-width: 100%;
+   color: aliceblue;
+   height: 100px;
+ }
+
+ .footerHeading{
+  margin-left: 30px;
+  padding-left: 20px;
+  padding-top: 40px;
+}
+
